--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/mainC.css">
     <title>LinYuHsuan</title>
   </head>
   <body>
-    <div class="header">
+    <!-- <div class="header">
       <div class="option">
         <span class="option-button">
           <h3>Works</h3>
@@ -15,19 +17,19 @@
           <h3>About</h3>
         </span>
       </div>
-    </div>
+    </div> -->
     <div class="container">
       <div class="main">
         <section class="unit">
           <div class="unit-topic">
-            <h1>Yu-Hsuan, Lin</h1>
-            <h4></h4>
+            <h1>Lin, Yu-Hsuan</h1>
+            <h4>Front-end Developer, UX Researcher</h4>
           </div>
           <div id="scroll">
 
           </div>
         </section>
-        <section class="work">
+        <section class="work work-style">
           <div class="work-topic">
             <div class="work-title">
               <h2>Skyfie</h2>
@@ -38,6 +40,10 @@
           </div>
           <div class="work-body">
             <div class="work-abstract">
+              <h6>Genre: Research</h6>
+              <h6>Responsible for: Design, Develop </h6>
+              <h6>Technique: Unity, Swift, Arduino</h6>
+              <h6>Abstract:</h6>
               <p>As personal drones become more popular, we can envision a future where flying selfie bots are always with us. At present, users have to be very skillful to pilot the drone and are not easy to take aerial selfies by state-of-the-art methods. Based on user observation, we generalize the interaction flow of selfie taking into two stages: Positioning and Framing stage. In each stage, we present new interaction techniques including a direct pointing technique, two fine-tuning techniques, and a touch manipulation for framing. We conducted an experiment in VR and found that positioning a camera by using our Cylindrical and Spherical techniques are more efficient and easier to learn and use. We implemented a proof-of-concept Skyfie controller for evaluation. The result shows users felt intuitive and expressed enthusiasm to take aerial selfies with our techniques. Finally, we discuss the insights from the evaluation and conclude with future directions.</p>
             </div>
             <div class="work-img">
@@ -48,7 +54,7 @@
             <iframe src="https://www.youtube.com/embed/pJCPk392ZUE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </section>
-        <section class="work">
+        <section class="work work-style">
           <div class="work-topic">
             <div class="work-title">
               <h2>EasyAuction</h2>
@@ -59,8 +65,12 @@
           </div>
           <div class="work-body">
             <div class="work-abstract">
+              <h6>Genre: Website</h6>
+              <h6>Responsible for: Design, Programming </h6>
+              <h6>Technique: html, CSS, JavaScipt</h6>
+              <h6>Abstract:</h6>
               <p>Bulletinboard using Firebase</p>
-              <a href="https://lexusjimmy.github.io/easyAssignment/"> Visit Website </a>
+              <a href="https://lexusjimmy.github.io/easyAssignment/"><h5>Visit Website</h5>  </a>
             </div>
             <div class="work-img">
 
@@ -70,7 +80,7 @@
             <iframe src="https://www.youtube.com/embed/z7pxrHk5O4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
           </div>
         </section>
-        <section class="work">
+        <section class="work work-style">
           <div class="work-topic">
             <div class="work-title">
               <h2>Brain Department Store Official Site(Graduation Exhibition)</h2>
@@ -81,20 +91,49 @@
           </div>
           <div class="work-body">
             <div class="work-abstract">
+              <h6>Genre: Website</h6>
+              <h6>Responsible for: Programming, Concept </h6>
+              <h6>Technique: html, CSS, JavaScipt</h6>
+              <h6>Abstract:</h6>
               <p>Parallax Webpage</p>
-              <a href="https://lexusjimmy.github.io/prallaxScroll/page"> Visit Website </a>
+              <a href="https://lexusjimmy.github.io/prallaxScroll/page"><h5>Visit Website</h5></a>
             </div>
             <div class="work-img">
 
             </div>
           </div>
         </section>
-        <footer class="footer footer-style">
-          <div class="name-box">
-            <p>Lin, Yu-Hsuan</p>
+        <section class="work work-style">
+          <div class="work-topic">
+            <div class="work-title">
+              <h2>BBR(Award Winning)</h2>
+            </div>
+            <div class="work-year">
+              <h5>2014</h5>
+            </div>
           </div>
-        </footer>
+          <div class="work-body">
+            <div class="work-abstract">
+              <h6>Genre: Tools</h6>
+              <h6>Responsible for: Programming(Arduino), Concept </h6>
+              <h6>Technique: Arduino, html, JavaScript</h6>
+              <h6>Abstract:</h6>
+              <p>Original training tool for badminton</p>
+            </div>
+            <div class="work-img">
+
+            </div>
+          </div>
+          <div class="work-video">
+            <iframe src="https://www.youtube.com/embed/UK7EBH9r2M4" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          </div>
+        </section>
       </div>
+      <footer class="footer footer-style">
+        <div class="name-box">
+          <p>Lin, Yu-Hsuan</p>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
