commit the unshow
worst method

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
               <h6>Abstract:</h6>
               <p>As personal drones become more popular, we can envision a future where flying selfie bots are always with us. At present, users have to be very skillful to pilot the drone and are not easy to take aerial selfies by state-of-the-art methods. Based on user observation, we generalize the interaction flow of selfie taking into two stages: Positioning and Framing stage. In each stage, we present new interaction techniques including a direct pointing technique, two fine-tuning techniques, and a touch manipulation for framing. We conducted an experiment in VR and found that positioning a camera by using our Cylindrical and Spherical techniques are more efficient and easier to learn and use. We implemented a proof-of-concept Skyfie controller for evaluation. The result shows users felt intuitive and expressed enthusiasm to take aerial selfies with our techniques. Finally, we discuss the insights from the evaluation and conclude with future directions.</p>
             </div>
-            <div class="work-img" style="background-image: url('img/skyfie01.png')">
-            </div>
+            <!-- <div class="work-img" style="background-image: url('img/skyfie01.png')">
+            </div> -->
           </div>
           <div class="work-video">
             <iframe src="https://www.youtube.com/embed/pJCPk392ZUE" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
@@ -71,9 +71,9 @@
               <p>Bulletin board that able to leave message.</p>
               <a href="https://lexusjimmy.github.io/easyAssignment/"><h5>Visit Website</h5>  </a>
             </div>
-            <div class="work-img" style="background-image: url('img/easy01.png')">
+            <!-- <div class="work-img" style="background-image: url('img/easy01.png')">
 
-            </div>
+            </div> -->
           </div>
           <div class="work-video">
             <iframe src="https://www.youtube.com/embed/z7pxrHk5O4Q" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
