--- a/index.html
+++ b/index.html
@@ -91,6 +91,27 @@
         <section class="work work-style">
           <div class="work-topic">
             <div class="work-title">
+              <h2>DCT Website(RWD practice)</h2>
+            </div>
+            <div class="work-year">
+              <h5>2016</h5>
+            </div>
+          </div>
+          <div class="work-body">
+            <div class="work-abstract">
+              <h6>Genre: Website</h6>
+              <h6>Responsible for: Design, Programming </h6>
+              <h6>Technique: html, CSS</h6>
+              <h6>Abstract:</h6>
+              <p>RWD Design practice.</p>
+            </div>
+            <!-- <div class="work-img" style="background-image: url('img/skyfie01.png')">
+            </div> -->
+          </div>
+        </section>
+        <section class="work work-style">
+          <div class="work-topic">
+            <div class="work-title">
               <h2>Brain Department Store Official Site(Graduation Exhibition)</h2>
             </div>
             <div class="work-year">
