--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
               <h6>Technique: html, CSS</h6>
               <h6>Abstract:</h6>
               <p>RWD Design practice.</p>
+              <a href="https://lexusjimmy.github.io/rwd/"><h5>Visit Website</h5>  </a>
             </div>
             <!-- <div class="work-img" style="background-image: url('img/skyfie01.png')">
             </div> -->
