Add word contents
add more explain and adjust html class

--- a/index.html
+++ b/index.html
@@ -72,12 +72,15 @@
             </div>
           </div>
           <div class="work-body">
-            <div class="work-abstract">
+            <div class="work-abstract full-width">
               <h6>Genre: Website</h6>
               <h6>Responsible for: Design, Programming </h6>
               <h6>Technique: html, CSS, JavaScipt</h6>
               <h6>Abstract:</h6>
-              <p>Bulletin board that able to leave message.</p>
+              <p>EasyAuction is a website that allows people to upload their items for sold. Visitors can log-in with facebook account and leave messages to sellers. A basic and easy website for second-hand goods selling.<br>
+                Since this website is powered by Google firebase, it updates the messages immediately. You can even regard it as a messenger. <br>
+                Although it has database to save the data that users upload, I didn't use any of the backend technology. Simply using the Jquery and JavaScript accomplish it.
+              </p>
               <a href="https://lexusjimmy.github.io/easyAssignment/"><h5>Visit Website</h5>  </a>
             </div>
             <!-- <div class="work-img" style="background-image: url('img/easy01.png')">
@@ -91,7 +94,7 @@
         <section class="work work-style" id="triggerA">
           <div class="work-topic">
             <div class="work-title">
-              <h2>DCT Website(RWD practice)</h2>
+              <h2>DCT Website(RWD)</h2>
             </div>
             <div class="work-year">
               <h5>2016</h5>
@@ -101,9 +104,12 @@
             <div class="work-abstract">
               <h6>Genre: Website</h6>
               <h6>Responsible for: Design, Programming </h6>
-              <h6>Technique: html, CSS</h6>
+              <h6>Technique: html, CSS, SASS</h6>
               <h6>Abstract:</h6>
-              <p>RWD Design practice.</p>
+              <p>It is not the real official site of department of Digital Contents and Technology. In fact, it's a website for practicing "responsive design".<br>
+                In this website, I designed 5 kinds of layout to present the same contents. Layout changes automatically depend on window size to improve its readibility. <br>
+                The CSS file is produced by SASS, which make it easier to read.
+              </p>
               <a href="https://lexusjimmy.github.io/rwd/"><h5>Visit Website</h5>  </a>
             </div>
             <div class="work-imgFrame" id="RWDScene">
@@ -134,7 +140,9 @@
               <h6>Responsible for: Programming, Concept </h6>
               <h6>Technique: html, CSS, JavaScipt</h6>
               <h6>Abstract:</h6>
-              <p>Parallax Webpage (Graduation Exhibition)</p>
+              <p>This is the official website of my Graduation Exhibition. During that period of time, it was quite popular to make website with parallax, so we also decided to make a website with parallax. <br>
+                I tried to make a parallax website simply with JavaScript and Jquery but in vain, so I used ScrollMagic, which is a famous framework known for making parallax to accomplish my goal. <br>
+              </p>
               <a href="https://lexusjimmy.github.io/prallaxScroll/page"><h5>Visit Website</h5></a>
             </div>
             <div class="work-imgFrame" id="BDSScene">
@@ -160,12 +168,16 @@
             </div>
           </div>
           <div class="work-body">
-            <div class="work-abstract">
+            <div class="work-abstract full-width">
               <h6>Genre: Tools</h6>
               <h6>Responsible for: Programming(Arduino), Concept </h6>
               <h6>Technique: Arduino, html, JavaScript</h6>
               <h6>Abstract:</h6>
-              <p>Better Badminton Revolution Original training tool for badminton(Award Winning)</p>
+              <p>BBR, which is standed for "Better Badminton Revolution" is an original training tool for badminton. We found out the problem of lacking badminton practicing place, while this sports require highly technique. <br>
+                We invented this system to help people practice the steps of badminton. Inspired by the video game "Dance Dance Revolution", we designing our tool to let user practice while playing our tool. User can use it without going to badminton field.<br>
+                With these innovation, this tool won "金驗獎". <br>
+                This system consist three hypersonic distance detector and one android phone. Using the node- js we can read the result from detector and conduct the game.
+              </p>
             </div>
           </div>
           <div class="work-video">
