1.add about. 2.fix herounit 3.other minor decorate

--- a/index01.html
+++ b/index01.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Roboto|Ubuntu" rel="stylesheet">
     <link rel="stylesheet" href="css/master.css">
     <title>LinYuHsuan</title>
 
@@ -25,7 +26,11 @@
       <section class="section section--right-black" data-toggle= 'about'>
         <h2 class="section__title">about</h2>
         <div class="section__body">
-          <p class="section__word"></p>
+          <p class="section__word">An UX researcher double major in International Business and Digital Content & Technology.  <br>
+            Usually try to find out the best solutions to problems. <br>
+            Like to make new things! <br>
+            Welcome to my portfolio!
+           </p>
         </div>
       </section>
       <section class="section section--work" data-toggle= 'works'>
@@ -34,7 +39,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\skyfie01.PNG" alt="skyfie">
+                <img src="img\skyfie01.png" alt="skyfie">
               </div>
               <h4 class="work__title">skyfie</h4>
               <h5 class="work__year">2015-2017</h5>
@@ -54,7 +59,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\easy01.PNG" alt="EasyAuction">
+                <img src="img\easy01.png" alt="EasyAuction">
               </div>
               <h4 class="work__title">EasyAuction</h4>
               <h5 class="work__year">2016</h5>
@@ -76,7 +81,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\rwd01.PNG" alt="DCT Website">
+                <img src="img\rwd01.png" alt="DCT Website">
               </div>
               <h4 class="work__title">DCT Website(RWD)</h4>
               <h5 class="work__year">2016</h5>
@@ -98,7 +103,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\brainDe03.PNG" alt="BrainDepartmentStore">
+                <img src="img\brainDe03.png" alt="BrainDepartmentStore">
               </div>
               <h4 class="work__title">Brain Department Store Official Site</h4>
               <h5 class="work__year">2014</h5>
@@ -119,7 +124,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\skyfie01.PNG" alt="">
+                <img src="img\BBR.png" alt="BBR">
               </div>
               <h4 class="work__title">BBR</h4>
               <h5 class="work__year">2014</h5>
@@ -151,5 +156,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="js\noframework.waypoints.min.js" charset="utf-8"></script>
     <script src="js/main01.js" charset="utf-8"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114611016-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-114611016-1');
+    </script>
   </body>
 </html>
