--- a/index01.html
+++ b/index01.html
@@ -39,7 +39,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\skyfie01.png" alt="skyfie">
+                <img src="img\skyfie01.PNG" alt="skyfie">
               </div>
               <h4 class="work__title">skyfie</h4>
               <h5 class="work__year">2015-2017</h5>
@@ -59,7 +59,7 @@
           <div class="work">
             <div class="work__header">
               <div class="work__img">
-                <img src="img\easy01.png" alt="EasyAuction">
+                <img src="img\easy01.PNG" alt="EasyAuction">
               </div>
               <h4 class="work__title">EasyAuction</h4>
               <h5 class="work__year">2016</h5>
