1.fix firefox window problem 2.language pack in half

--- a/index01.html
+++ b/index01.html
@@ -19,14 +19,14 @@
       </header>
       <section class="section section--left-black" data-toggle= 'top'>
         <div class="hero-unit">
-          <h1 class="hero-unit__title">lin, yu-hsuan</h1>
-          <h3 class="hero-unit__subtitle">UX Researcher, Front-end Developer</h3>
+          <h1 class="hero-unit__title" language-field = 'name'>lin, yu-hsuan</h1>
+          <h3 class="hero-unit__subtitle" language-field = 'job'>UX Researcher, Front-end Developer</h3>
         </div>
       </section>
       <section class="section section--right-black" data-toggle= 'about'>
         <h2 class="section__title">about</h2>
         <div class="section__body">
-          <p class="section__word">An UX researcher double major in International Business and Digital Content & Technology.  <br>
+          <p class="section__word" language-field = 'about'>An UX researcher double major in International Business and Digital Content & Technology.  <br>
             Usually try to find out the best solutions to problems. <br>
             Like to make new things! <br>
             Welcome to my portfolio!
@@ -44,13 +44,13 @@
               <h4 class="work__title">skyfie</h4>
               <h5 class="work__year">2015-2017</h5>
             </div>
-            <div class="work__body">
+            <div class="work__body" work-name= "skyfie">
               <ul class="work__description">
-                <li>Genre: Research</li>
-                <li>Responsible for: Design, Develop</li>
-                <li>Technique: Unity, Swift, Arduino</li>
+                <li language-field = "genre">Genre: Research</li>
+                <li language-field = "responsible">Responsible for: Design, Develop</li>
+                <li language-field = "technique">Technique: Unity, Swift, Arduino</li>
               </ul>
-              <p class="work__abstract">
+              <p class="work__abstract" language-field = "abstract">
                 As personal drones become more popular, we can envision a future where flying selfie bots are always with us. At present, users have to be very skillful to pilot the drone and are not easy to take aerial selfies by state-of-the-art methods. Based on user observation, we generalize the interaction flow of selfie taking into two stages: Positioning and Framing stage. In each stage, we present new interaction techniques including a direct pointing technique, two fine-tuning techniques, and a touch manipulation for framing. We conducted an experiment in VR and found that positioning a camera by using our Cylindrical and Spherical techniques are more efficient and easier to learn and use. We implemented a proof-of-concept Skyfie controller for evaluation. The result shows users felt intuitive and expressed enthusiasm to take aerial selfies with our techniques. Finally, we discuss the insights from the evaluation and conclude with future directions.
               </p>
               <button class="btn__action" type="button" name="button" action-toggle="modal"><a href="https://www.youtube.com/embed/pJCPk392ZUE">View video</a> </button>
